<resources>
    <string name="app_name">FileTransformer</string>
    <!--    Bottom Navigation Strings-->
    <string name="home">Home</string>
    <string name="tools">Tools</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="transition">Transition</string>
    <string name="empty_folder">Empty Folder</string>
    <string name="view">View</string>
    <string name="user">User</string>
    <string name="sort">Sorting</string>
    <string name="create_folder_description">Press yellow button for create a  new folder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    Create folder Strings-->

    <string name="create_folder">Create Folder</string>
    <string name="folder_name">Folder name</string>
    <string name="folder">Folder</string>
    <string name="cancel">Cancel</string>
    <string name="folderexit">Folder is Exist</string>

    <!--    Search Strings-->
    <string name="search">Search</string>
    <string name="search_hint">Type here to search </string>
    <string name="ok">OK</string>

    <!--    HomeFragmentStrings-->
    <string name="recent_files">Recent Files</string>
    <string name="storage_categories">Storage Categories</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="sd_card">SD Card</string>
    <string name="downloads">Downloads</string>
    <string name="processed_files">Processed Files</string>
    <string name="favorites">Favorites</string>
    <string name="favorites_description">Your Favorite files will appear here</string>
    <string name="necessary_permissions_description">Please give the necessary permissions</string>

    <!-- TransitionStrings-->
    <string name="sorting_a_to_z">Sorting (A to Z)</string>
    <string name="sorting_z_to_a">Sorting (Z to A)</string>
    <string name="sorting_newest_items">Sorting Newest Items</string>
    <string name="sorting_oldest_items">Sorting Oldest Items</string>

    <!--    SettingsFragment-->
    <string name="language">Language</string>
    <string name="ask_before_using_mobiledata">Ask before using mobile data</string>
    <string name="dark_mode">Dark mode</string>

    <!--    OptionsBottomDialogStrings-->

    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="create_folder_with_selections">Create Folder with selection</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="remove_favorite">Remove favorite</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="duplicate">Duplicate</string>
    <string name="go_to_folder">Go to Folder</string>

    <string-array name="options_menu_string_array">
        <item>@string/tools</item>
        <item>@string/share</item>
        <item>@string/mark_as_favorite</item>
        <item>@string/create_folder_with_selections</item>
        <item>@string/rename</item>
        <item>@string/delete</item>
        <item>@string/move</item>
        <item>@string/copy</item>
        <item>@string/duplicate</item>
    </string-array>
    <string-array name="favorites_optionsmenu_string_array">
        <item>@string/tools</item>
        <item>@string/share</item>
        <item>@string/go_to_folder</item>
    </string-array>
    <string-array name="taken_photo_menu_array">
        <item>@string/tools</item>
        <item>@string/rename</item>
        <item>@string/delete</item>
        <item>@string/go_to_folder</item>
    </string-array>
    <string-array name="taken_photo_preview_array_string">
        <item>@string/share</item>
        <item>@string/go_to_folder</item>
    </string-array>

    <!--    Dialog warning strings-->

    <string name="wantToDeleteFile">Do you really want to delete</string>
    <string name="file_name_required">Filename must not be null</string>
    <string name="folder_name_required">Foldername must not be null</string>
    <string name="file_name_exist">FileName is already exist</string>
    <string name="item">Items</string>
    <string name="files">Files</string>
    <string name="file_moved">%1$d file moved.</string>
    <string name="file_copied">%1$d file copied.</string>
    <string name="files_moved">%1$d files moved.</string>
    <string name="files_copied">%1$d files copied.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="item_counts">%1$d elements</string>

    <!--    ToolsFragmentString-->
    <string name="pdf_to_image">Pdf to Image</string>
    <string name="pdf_to_excel">Pdf to Excel</string>
    <string name="pdf_to_word">Pdf to Word</string>
    <string name="image_to_pdf">Image to Pdf</string>
    <string name="compress_pdf">Compress Pdf</string>
    <string name="merge_pdf">Merge Pdf</string>
    <string name="split_pdf">Split Pdf</string>
    <string name="lock_pdf">Lock Pdf</string>
    <string name="unlock_pdf">Unlock Pdf</string>
    <string name="rotate_pdf">Rotate Pdf</string>
    <string name="watermark">Watermark</string>
    <string name="text_recognition">Text Recognition(OCR)</string>
    <string name="sign_pdf">Sign Pdf</string>
    <string name="next">Next</string>
    <string name="selected_files">%1$d  file%2$s selected</string>


<!--    Image Cropping Strings-->
    <string name="image_crop_title">Image Cropping</string>
    <string name="finish">Finish</string>


    <string-array name="pdf_converter_strings">
        <item>@string/pdf_to_image</item>
        <item>@string/pdf_to_excel</item>
        <item>@string/pdf_to_word</item>
        <item>@string/image_to_pdf</item>
    </string-array>

    <string-array name="pdf_tools_strings">
        <item>@string/compress_pdf</item>
        <item>@string/split_pdf</item>
        <item>@string/merge_pdf</item>
        <item>@string/lock_pdf</item>
        <item>@string/unlock_pdf</item>
        <item>@string/rotate_pdf</item>
    </string-array>

    <string name="pdf_converter_title">Pdf Converters</string>
    <string name="pdf_tool_title">Pdf Tools</string>
    <string name="image_converter_title">Image Converters</string>
</resources>