<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_dest"
        android:contentDescription="@string/home"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />
    <item
        android:id="@+id/tools_dest"
        android:contentDescription="@string/tools"
        android:icon="@drawable/icon_tools"
        android:title="@string/tools" />
    <item
        android:id="@+id/camera_dest"
        android:contentDescription="@string/camera"
        android:icon="@drawable/icon_camera"
        android:title="@string/camera" />
    <item
        android:id="@+id/settings_dest"
        android:contentDescription="@string/settings"
        android:icon="@drawable/icon_settings"
        android:title="@string/settings" />
</menu>