<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/home_dest">

    <fragment
        android:id="@+id/home_dest"
        android:name="com.cranked.androidfileconverter.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/tools_dest"
        android:name="com.cranked.androidfileconverter.ui.tools.ToolsFragment"
        android:label="@string/tools"
        tools:layout="@layout/fragment_tools" />
    <fragment
        android:id="@+id/camera_dest"
        android:name="com.cranked.androidfileconverter.ui.camera.CameraFragment"
        android:label="@string/camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/settings_dest"
        android:name="com.cranked.androidfileconverter.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />


</navigation>