<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:theme="@style/Theme.MaterialComponents.Light">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/side_margin"
        android:hint="@string/folder_name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/folderNameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/folder">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/side_margin"
        android:backgroundTint="@android:color/holo_red_dark"
        android:clickable="true"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cornerRadius="10dp"
        app:icon="@drawable/icon_cancel"
        app:iconPadding="0dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/side_margin"
        android:backgroundTint="#119A02"
        android:clickable="true"
        android:text="@string/ok"
        android:textColor="#FFFFFF"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cornerRadius="10dp"
        app:icon="@drawable/icon_tick"
        app:iconPadding="0dp"

        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>