<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.cranked.androidfileconverter.ui.task.TaskFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/task"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:id="@+id/internalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"

                app:srcCompat="@drawable/custom_radius_folder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/icon_margin_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/icon_margin_8dp"
                    android:text="@string/internal_storage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/icon_margin_8dp"
                    android:text="@{viewModel.internalLastModified}" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout

            android:id="@+id/sdcardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:visibility="@{viewModel.sdCardState ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/internalLayout">

            <ImageView
                android:layout_width="@dimen/folder_size"
                android:layout_height="@dimen/folder_size"

                app:srcCompat="@drawable/custom_radius_folder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/icon_margin_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/icon_margin_8dp"
                    android:text="@string/sd_card" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/icon_margin_8dp"
                    android:text="@{viewModel.sdLastModified}" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout

            android:id="@+id/downloadsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sdcardLayout">

            <ImageView
                android:layout_width="@dimen/folder_size"
                android:layout_height="@dimen/folder_size"

                app:srcCompat="@drawable/custom_radius_folder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/icon_margin_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/icon_margin_8dp"
                    android:text="@string/downloads" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/icon_margin_8dp"
                    android:text="@{viewModel.downloadsLastModified}"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout

            android:id="@+id/ftLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/downloadsLayout">

            <ImageView
                android:layout_width="@dimen/folder_size"
                android:layout_height="@dimen/folder_size"

                app:srcCompat="@drawable/custom_radius_folder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/icon_margin_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/icon_margin_8dp"
                    android:text="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/icon_margin_8dp"
                    android:text="@{viewModel.fileTransformerLastModified}" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout

            android:id="@+id/processedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ftLayout">

            <ImageView
                android:layout_width="@dimen/folder_size"
                android:layout_height="@dimen/folder_size"

                app:srcCompat="@drawable/custom_radius_folder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/icon_margin_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/icon_margin_8dp"
                    android:text="@string/processed_files" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/icon_margin_8dp"
                    android:text="@{viewModel.processedLastModified}" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>